<resources>
    <string name="app_name" translatable="false">Quest</string>
    <string name="password">パスワード</string>
    <string name="add">作成</string>
    <string name="next">次へ進む</string>
    <string name="back">前に戻る</string>
    <string name="reload">更新する</string>
    <string name="search">検索する</string>
    <string name="question_label">問</string>
    <string name="start_diagnosis">診断を開始</string>
    <string name="cancel_diagnosis">もどる</string>
    <string name="suspension_diagnosis">回答を中断</string>
    <string name="questionnaire_expand_text">答える</string>
    <string name="questionnaire_collapsed_text">閉じる</string>
    <string name="questionnaire_post_success_text">回答結果を送信しました</string>
    <string name="questionnaire_post_failure_text">回答結果の送信に失敗しました</string>
    <string name="dummy"> </string>
    <string name="questionnaire_1_number">問1</string>
    <string name="questionnaire_2_number">問2</string>
    <string name="questionnaire_3_number">問3</string>
    <string name="questionnaire_4_number">問4</string>
    <string name="questionnaire_5_number">問5</string>
    <string name="questionnaire_6_number">問6</string>
    <string name="questionnaire_7_number">問7</string>
    <string name="questionnaire_8_number">問8</string>
    <string name="questionnaire_9_number">問9</string>
    <string name="questionnaire_10_number">問10</string>
    <string name="questionnaire_11_number">問11</string>
    <string-array name="questionnaire_main_number_label_page_array">
        <item>@string/dummy</item>
        <item>@string/questionnaire_1_number</item>
        <item>@string/questionnaire_2_number</item>
        <item>@string/questionnaire_3_number</item>
        <item>@string/questionnaire_3_number</item>
        <item>@string/questionnaire_4_number</item>
        <item>@string/questionnaire_5_number</item>
        <item>@string/questionnaire_6_number</item>
        <item>@string/questionnaire_7_number</item>
        <item>@string/questionnaire_8_number</item>
        <item>@string/questionnaire_9_number</item>
        <item>@string/questionnaire_9_number</item>
        <item>@string/questionnaire_10_number</item>
        <item>@string/questionnaire_11_number</item>
        <item>@string/dummy</item>
    </string-array>
    <string name="questionnaire_sub_number_a">ア)</string>
    <string name="questionnaire_sub_number_b">イ)</string>
    <string name="questionnaire_sub_number_c">ウ)</string>
    <string name="questionnaire_sub_number_d">エ)</string>
    <string name="questionnaire_sub_number_e">オ)</string>
    <string name="questionnaire_sub_number_f">カ)</string>
    <string name="questionnaire_sub_number_g">キ)</string>
    <string name="questionnaire_sub_number_h">ク)</string>
    <string name="questionnaire_sub_number_i">ケ)</string>
    <string name="questionnaire_sub_number_j">コ)</string>
    <string-array name="questionnaire_sub_first_half_numbers">
        <item>@string/questionnaire_sub_number_a</item>
        <item>@string/questionnaire_sub_number_b</item>
        <item>@string/questionnaire_sub_number_c</item>
        <item>@string/questionnaire_sub_number_d</item>
        <item>@string/questionnaire_sub_number_e</item>
    </string-array>
    <string-array name="questionnaire_sub_latter_half_numbers">
        <item>@string/questionnaire_sub_number_f</item>
        <item>@string/questionnaire_sub_number_g</item>
        <item>@string/questionnaire_sub_number_h</item>
        <item>@string/questionnaire_sub_number_i</item>
        <item>@string/questionnaire_sub_number_j</item>
    </string-array>
    <string name="age_range_10_to_14">10歳〜14歳</string>
    <string name="age_range_15_to_19">15歳〜19歳</string>
    <string name="age_range_20_to_24">20歳〜24歳</string>
    <string name="age_range_25_to_29">25歳〜29歳</string>
    <string name="age_range_30_to_34">30歳〜34歳</string>
    <string name="age_range_35_to_39">35歳〜39歳</string>
    <string name="age_range_40_to_44">40歳〜44歳</string>
    <string name="age_range_45_to_49">45歳〜49歳</string>
    <string name="age_range_50_to_54">50歳〜54歳</string>
    <string name="age_range_55_to_59">55歳〜59歳</string>
    <string name="age_range_60_to_64">60歳〜64歳</string>
    <string name="age_range_65_to_69">65歳〜69歳</string>
    <string name="age_range_70_to_74">70歳〜74歳</string>
    <string name="age_range_75_to_79">75歳〜79歳</string>
    <string name="age_range_80_to_84">80歳〜84歳</string>
    <string name="age_range_85_to_89">85歳〜89歳</string>
    <string name="age_range_other">その他</string>
    <string-array name="age_range_array">
        <item>@string/age_range_10_to_14</item>
        <item>@string/age_range_15_to_19</item>
        <item>@string/age_range_20_to_24</item>
        <item>@string/age_range_25_to_29</item>
        <item>@string/age_range_30_to_34</item>
        <item>@string/age_range_35_to_39</item>
        <item>@string/age_range_40_to_44</item>
        <item>@string/age_range_45_to_49</item>
        <item>@string/age_range_50_to_54</item>
        <item>@string/age_range_55_to_59</item>
        <item>@string/age_range_60_to_64</item>
        <item>@string/age_range_65_to_69</item>
        <item>@string/age_range_70_to_74</item>
        <item>@string/age_range_75_to_79</item>
        <item>@string/age_range_80_to_84</item>
        <item>@string/age_range_85_to_89</item>
        <item>@string/age_range_other</item>
    </string-array>
    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="gender_other">その他</string>
    <string-array name="gender_array">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
        <item>@string/gender_other</item>
    </string-array>
    <string name="create_user_toolbar_title">受検者登録</string>
    <string name="create_user_fist_name_label">姓</string>
    <string name="create_user_last_name_label">名</string>
    <string name="create_user_first_name_read_label" translatable="false">姓(かな)</string>
    <string name="create_user_last_name_read_label" translatable="false">名(かな)</string>
    <string name="create_user_name_header_label">氏名</string>
    <string name="create_user_info_header_label">詳細</string>
    <string name="create_user_age_label">年齢</string>
    <string name="create_user_gender_label">性別</string>
    <string name="create_user_agreement_label">利用規約と個人情報の取扱についてに同意の上、\n登録してください</string>
    <string name="create_user_agreement_button_label">同意して登録</string>
    <string name="create_user_success_label">受検者データの登録を行いました</string>
    <string name="create_user_failure_label">受検者データの登録に失敗しました</string>
    <string name="user_list_toolbar_title">受検者一覧</string>
    <string name="user_list_last_questionnaire_label">最終受検日 : </string>
    <string name="user_list_none_last_questionnaire_label">なし</string>
    <string name="user_list_error_loading_message">読み込みに失敗しました</string>
    <string name="user_list_name_ascending_order_label">名前(昇順)</string>
    <string name="user_list_name_descending_order_label">名前(降順)</string>
    <string name="user_list_last_questionnaire_ascending_order_label">最終受検日(昇順)</string>
    <string name="user_list_last_questionnaire_descending_order_label">最終受検日(降順)</string>
    <string name="diagnostic_check_dialog_title">さんの診断です</string>
    <string name="diagnostic_check_dialog_message"><b>診断を開始</b>を押すとアンケートの回答画面に進みます。\n\n受検する患者に端末を渡してください。</string>
    <string name="suspend_check_message">回答を中断を押すと、それまでに回答した内容が削除されます。\nよろしいですか？</string>
    <string name="questionnaire_toolbar_title">あなたの健康について</string>
    <string name="questionnaire_start_message1">
        このアンケートはあなたがご自分の健康をどのように考えているかをおうかがいするものです。\nあなたが毎日をどのように感じ、日常の活動をどのくらい自由にできるかを知るうえで参考になります。\nお手数をおかけしますが、何卒ご協力のほど宜しくお願い申し上げます。
    </string>
    <string name="questionnaire_start_message2">以下のそれぞれの質問について、一番よくあてはまるものに印（☑）をつけてください。</string>
    <string name="questionnaire_1_message">あなたの健康状態は?\n（一番よく当てはまるものに☑印をつけて下さい）</string>
    <string name="questionnaire_1_answer_1">最高に良い</string>
    <string name="questionnaire_1_answer_2">とても良い</string>
    <string name="questionnaire_1_answer_3">良い</string>
    <string name="questionnaire_1_answer_4">あまり良くない</string>
    <string name="questionnaire_1_answer_5">良くない</string>
    <string-array name="questionnaire_1_answers">
        <item>@string/questionnaire_1_answer_1</item>
        <item>@string/questionnaire_1_answer_2</item>
        <item>@string/questionnaire_1_answer_3</item>
        <item>@string/questionnaire_1_answer_4</item>
        <item>@string/questionnaire_1_answer_5</item>
    </string-array>
    <string name="questionnaire_2_message">1年前と比べて、現在の健康状態はいかがですか。\n（一番よく当てはまるものに☑印をつけて下さい）</string>
    <string name="questionnaire_2_answer_1">1年前より、はるかに良い</string>
    <string name="questionnaire_2_answer_2">1年前よりは、やや良い</string>
    <string name="questionnaire_2_answer_3">1年前と、ほぼ同じ</string>
    <string name="questionnaire_2_answer_4">1年前ほど、良くない</string>
    <string name="questionnaire_2_answer_5">1年前より、はるかに悪い</string>
    <string-array name="questionnaire_2_answers">
        <item>@string/questionnaire_2_answer_1</item>
        <item>@string/questionnaire_2_answer_2</item>
        <item>@string/questionnaire_2_answer_3</item>
        <item>@string/questionnaire_2_answer_4</item>
        <item>@string/questionnaire_2_answer_5</item>
    </string-array>
    <string name="questionnaire_3_message">以下の質問は、日常よく行われている活動です。あなたは<u>健康上の理由で</u>、こうした活動をすることがむずかしいと感じますか。むずかしいとすればどのくらいですか。\n\n（ア〜コまでのそれぞれの質問について、一番よくあてはまるものに☑印をつけて下さい）
    </string>
    <string name="questionnaire_3_a_message"><u>激しい活動</u>、例えば、一生けんめい走る、重い物を持ち上げる、激しいスポーツをするなど
    </string>
    <string name="questionnaire_3_b_message"><u>適度の活動</u>、例えば、家や庭のそうじをする、1〜2時間散歩するなど
    </string>
    <string name="questionnaire_3_c_message">少し重い物を持ち上げたり、運んだりする（例えば買い物袋など）</string>
    <string name="questionnaire_3_d_message">階段を<u>数階上</u>までのぼる
    </string>
    <string name="questionnaire_3_e_message">階段を<u>1階上</u>までのぼる
    </string>
    <string name="questionnaire_3_f_message">体を前に曲げる、ひざまずく、かがむ</string>
    <string name="questionnaire_3_g_message"><u>1キロメートル以上</u>歩く
    </string>
    <string name="questionnaire_3_h_message"><u>数百メートルくらい</u>歩く
    </string>
    <string name="questionnaire_3_i_message"><u>百メートルくらい</u>歩く
    </string>
    <string name="questionnaire_3_j_message">自分でお風呂に入ったり、着がえたりする</string>
    <string name="questionnaire_3_answer_1">とてもむずかしい</string>
    <string name="questionnaire_3_answer_2">少しむずかしい</string>
    <string name="questionnaire_3_answer_3">ぜんぜんむずかしくない</string>
    <string name="questionnaire_7_message"><u>過去１ヶ月間に</u>、<u>体の痛み</u>をどのくらい感じましたか。\n\n（一番よくあてはまるものに☑印をつけて下さい）
    </string>
    <string name="questionnaire_7_answer_1">ぜんぜんなかった</string>
    <string name="questionnaire_7_answer_2">かすかな痛み</string>
    <string name="questionnaire_7_answer_3">軽い痛み</string>
    <string name="questionnaire_7_answer_4">中くらいの痛み</string>
    <string name="questionnaire_7_answer_5">強い痛み</string>
    <string name="questionnaire_7_answer_6">非常に激しい痛み</string>
    <string name="questionnaire_9_a_message">元気いっぱいでしたか</string>
    <string name="questionnaire_9_answer_1">いつも</string>
    <string name="questionnaire_9_answer_2">ほとんどいつも</string>
    <string name="questionnaire_9_answer_3">ときどき</string>
    <string name="questionnaire_9_answer_4">まれに</string>
    <string name="questionnaire_9_answer_5">ぜんぜんない</string>
    <string name="questionnaire_11_a_message">私は他の人に比べて病気になりやすいと思う</string>
    <string name="questionnaire_11_answer_1">まったくそのとおり</string>
    <string name="questionnaire_11_answer_2">ほぼあてはまる</string>
    <string name="questionnaire_11_answer_3">何とも言えない</string>
    <string name="questionnaire_11_answer_4">ほとんどあてはまらない</string>
    <string name="questionnaire_11_answer_5">ぜんぜんあてはまらない</string>
</resources>