<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.dai1678.quest.ui.questionnaire.QuestionnaireViewModel"/>
    </data>
    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp">

            <TextView
                    android:id="@+id/questionnaire_11_sub_number_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/questionnaire_sub_number_a"/>

            <TextView
                    android:id="@+id/questionnaire_11_sub_message_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/questionnaire_11_sub_number_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/questionnaire_11_a_message"/>

            <RadioGroup
                    android:id="@+id/questionnaire_11_radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:orientation="vertical"
                    android:checkedButton="@id/questionnaire_11_answer_1_radio_button"
                    app:layout_constraintTop_toBottomOf="@id/questionnaire_11_sub_message_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/questionnaire_11_sub_message_text"
                    app:layout_constraintEnd_toEndOf="@id/questionnaire_11_sub_message_text">

                <RadioButton
                        android:id="@+id/questionnaire_11_answer_1_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radio_button_vertical_margin"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/questionnaire_11_answer_1"
                        android:textSize="@dimen/text_size_medium"/>

                <RadioButton
                        android:id="@+id/questionnaire_11_answer_2_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radio_button_vertical_margin"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/questionnaire_11_answer_2"
                        android:textSize="@dimen/text_size_medium"/>

                <RadioButton
                        android:id="@+id/questionnaire_11_answer_3_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radio_button_vertical_margin"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/questionnaire_11_answer_3"
                        android:textSize="@dimen/text_size_medium"/>

                <RadioButton
                        android:id="@+id/questionnaire_11_answer_4_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radio_button_vertical_margin"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/questionnaire_11_answer_4"
                        android:textSize="@dimen/text_size_medium"/>

                <RadioButton
                        android:id="@+id/questionnaire_11_answer_5_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radio_button_vertical_margin"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/questionnaire_11_answer_5"
                        android:textSize="@dimen/text_size_medium"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
